Set ACLs by KBase username, not email address.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -6,23 +6,19 @@ A basic java client for the Shock service. Supports node creation, deletion and
 retrieval of a subset of node data, streaming file up/download, viewing
 ACLs, and limited ACL modification.
 
-VERSION: 0.0.1 (Released 11/11/2013)
+VERSION: 0.0.2 (Released 11/11/2013)
 -----------------------------------------
 
-shock_service commit: 931c60b76c00fc9229a338b51905cfbea7d796b7
+shock_service commit: 08b9f0c6b690cf06c04604165b6534f6580295d5
 
 NEW FEATURES:
-- First release.
+- No need to specify file size when uploading a file.
+- ACLs are now set by user, not by email address, so the AuthUser class is
+	not necessary.
 
 UPDATED FEATURES / MAJOR BUG FIXES:
 - N/A
 
 ANTICIPATED FUTURE DEVELOPMENTS:
-- Remove need to specify the file size when uploading a file.
-- Use KBase user name rather than email for ACLs.
 - Copy a node when Shock supports it.
 - ACLs via KBase groups when Shock supports it.
-
-ISSUES:
-Since the addNode(file) methods are going to be rewritten in the next release,
-test coverage is not complete.
