--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -6,7 +6,7 @@ A basic java client for the Shock service. Supports node creation, deletion and
 retrieval of a subset of node data, streaming file up/download, viewing
 ACLs, and limited ACL modification.
 
-VERSION: 0.0.2 (Released 11/11/2013)
+VERSION: 0.0.2 (Released 11/12/2013)
 -----------------------------------------
 
 shock_service commit: 08b9f0c6b690cf06c04604165b6534f6580295d5
@@ -17,7 +17,8 @@ NEW FEATURES:
 	not necessary.
 
 UPDATED FEATURES / MAJOR BUG FIXES:
-- N/A
+- Fixed a rounding bug such that retrieved files where the size % 100,000,000
+	is > 0 but close to 1 are truncated.
 
 ANTICIPATED FUTURE DEVELOPMENTS:
 - Copy a node when Shock supports it.
