Update release notes.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -6,6 +6,25 @@ A basic java client for the Shock service. Supports node creation, deletion and
 retrieval of a subset of node data, streaming file up/download, viewing
 ACLs, and limited ACL modification.
 
+VERSION: 0.0.4 (Released 12/3/2013)
+-----------------------------------------
+
+shock_service commit: 08b9f0c6b690cf06c04604165b6534f6580295d5
+
+NEW FEATURES:
+- None
+
+UPDATED FEATURES / MAJOR BUG FIXES:
+- Fixed bug causing failures in multi-threaded environments
+	- Requires update of Apache HTTP libs to 4.3+
+- removed setNodeWorldReadable() in anticipation of the upcoming Shock ACL
+	changes
+
+ANTICIPATED FUTURE DEVELOPMENTS:
+- Copy a node when Shock supports it.
+- ACLs via KBase groups when Shock supports it.
+
+
 VERSION: 0.0.3 (Released 11/24/2013)
 -----------------------------------------
 
@@ -20,3 +39,44 @@ UPDATED FEATURES / MAJOR BUG FIXES:
 ANTICIPATED FUTURE DEVELOPMENTS:
 - Copy a node when Shock supports it.
 - ACLs via KBase groups when Shock supports it.
+
+
+VERSION: 0.0.2 (Released 11/12/2013)
+-----------------------------------------
+
+shock_service commit: 08b9f0c6b690cf06c04604165b6534f6580295d5
+
+NEW FEATURES:
+- No need to specify file size when uploading a file.
+- ACLs are now set by user, not by email address, so the AuthUser class is
+	not necessary.
+
+UPDATED FEATURES / MAJOR BUG FIXES:
+- Fixed a rounding bug such that retrieved files where the size % 100,000,000
+	is > 0 but close to 1 are truncated.
+
+ANTICIPATED FUTURE DEVELOPMENTS:
+- Copy a node when Shock supports it.
+- ACLs via KBase groups when Shock supports it.
+
+
+VERSION: 0.0.1 (Released 11/11/2013)
+-----------------------------------------
+
+shock_service commit: 931c60b76c00fc9229a338b51905cfbea7d796b7
+
+NEW FEATURES:
+- First release.
+
+UPDATED FEATURES / MAJOR BUG FIXES:
+- N/A
+
+ANTICIPATED FUTURE DEVELOPMENTS:
+- Remove need to specify the file size when uploading a file.
+- Use KBase user name rather than email for ACLs.
+- Copy a node when Shock supports it.
+- ACLs via KBase groups when Shock supports it.
+
+ISSUES:
+Since the addNode(file) methods are going to be rewritten in the next release,
+test coverage is not complete.
